# tic-80-paint

./: CMakeLists.txt  base.wasmp
src/: main.c
